gitops/espresso/apps/uptime-kuma/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
    gateway-access: public
    pod-security.kubernetes.io/enforce: baseline
