gitops/espresso/apps/uptime-kuma/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  serviceName: uptime-kuma-internal
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: autokuma
          image: ghcr.io/bigboot/autokuma:2.0.0@sha256:8acbd3ad3ec8cb6c066aa0ee541154921283ec78159015937128541921c47974
          volumeMounts:
            - mountPath: /monitors
              name: monitors
              readOnly: true
            - mountPath: /data
              name: autokuma-data
      volumes:
        - name: monitors
          projected:
            sources:
              - configMap:
                  name: uptime-kuma-monitors
              - configMap:
                  name: uptime-kuma-monitors-manafish
                  optional: true
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: nvme-ha
    - metadata:
        name: autokuma-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
        storageClassName: nvme-ha
