gitops/espresso/apps/uptime-kuma/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-internal
  namespace: uptime-kuma
spec:
  clusterIP: None
  selector:
    app: uptime-kuma
  ports:
    - name: http
      port: 3001
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    lbipam.cilium.io/ips: 10.0.188.4,fd7a:115c:a1e0:188::4
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: uptime-kuma
  ports:
    - name: http
      port: 80
      targetPort: http
