gitops/espresso/apps/uptime-kuma/reconciler.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: uptime-kuma-status-page-reconciler
  namespace: uptime-kuma
spec:
  endpointSelector:
    matchLabels:
      app: uptime-kuma-status-page-reconciler
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: uptime-kuma
      toPorts:
        - ports:
            - port: "3001"
              protocol: TCP
    # pip install at runtime: PyPI + warehouse file CDN.
    - toFQDNs:
        - matchName: "pypi.org"
        - matchName: "files.pythonhosted.org"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
